{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 292,
  "lineage": "89d30a70-4bc6-c859-e942-6a5add6366df",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "az_ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/networkInterfaces/Testing-ni",
            "internal_domain_name_suffix": "3atzn520j2ye5eivk42jmvii5h.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/publicIPAddresses/Testing-ip",
                "subnet_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/virtualNetworks/iede_adu-rg-vnet/subnets/iede_adu-rg-subnet"
              }
            ],
            "location": "westeurope",
            "name": "Testing-ni",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "iede_adu-rg"
          },
          "dependencies": [
            "azurerm_public_ip.az_ip",
            "azurerm_subnet.az_sn",
            "azurerm_virtual_network.az_vn",
            "data.azurerm_resource_group.existing"
          ]
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/networkInterfaces/Production-ni",
            "internal_domain_name_suffix": "3atzn520j2ye5eivk42jmvii5h.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/publicIPAddresses/Production-ip",
                "subnet_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/virtualNetworks/iede_adu-rg-vnet/subnets/iede_adu-rg-subnet"
              }
            ],
            "location": "westeurope",
            "name": "Production-ni",
            "private_ip_address": "10.123.1.5",
            "private_ip_addresses": [
              "10.123.1.5"
            ],
            "resource_group_name": "iede_adu-rg"
          },
          "dependencies": [
            "azurerm_public_ip.az_ip",
            "azurerm_subnet.az_sn",
            "azurerm_virtual_network.az_vn",
            "data.azurerm_resource_group.existing"
          ]
        },
        {
          "index_key": "vm3",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/networkInterfaces/Acceptance-ni",
            "internal_domain_name_suffix": "3atzn520j2ye5eivk42jmvii5h.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/publicIPAddresses/Acceptance-ip",
                "subnet_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/virtualNetworks/iede_adu-rg-vnet/subnets/iede_adu-rg-subnet"
              }
            ],
            "location": "westeurope",
            "name": "Acceptance-ni",
            "private_ip_address": "10.123.1.6",
            "private_ip_addresses": [
              "10.123.1.6"
            ],
            "resource_group_name": "iede_adu-rg"
          },
          "dependencies": [
            "azurerm_public_ip.az_ip",
            "azurerm_subnet.az_sn",
            "azurerm_virtual_network.az_vn",
            "data.azurerm_resource_group.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "az_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/networkSecurityGroups/iede_adu-rg-security",
            "location": "westeurope",
            "name": "iede_adu-rg-security",
            "resource_group_name": "iede_adu-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "iede_adu-rg-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Pillar": "Innovative Tech",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "az_sr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/networkSecurityGroups/iede_adu-rg-security/securityRules/iede_adu-rg-rule",
            "name": "iede_adu-rg-rule",
            "network_security_group_name": "iede_adu-rg-security",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "iede_adu-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.az_sg",
            "data.azurerm_resource_group.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "az_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/publicIPAddresses/Testing-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Testing-ip",
            "resource_group_name": "iede_adu-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Pillar": "Innovative Tech",
              "Role": "Futures",
              "Usage": "Training / Certification related activities",
              "environment": "dev"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.existing"
          ]
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/publicIPAddresses/Production-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Production-ip",
            "resource_group_name": "iede_adu-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Pillar": "Innovative Tech",
              "Role": "Futures",
              "Usage": "Training / Certification related activities",
              "environment": "dev"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.existing"
          ]
        },
        {
          "index_key": "vm3",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/publicIPAddresses/Acceptance-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Acceptance-ip",
            "resource_group_name": "iede_adu-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Pillar": "Innovative Tech",
              "Role": "Futures",
              "Usage": "Training / Certification related activities",
              "environment": "dev"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "az_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/virtualNetworks/iede_adu-rg-vnet/subnets/iede_adu-rg-subnet",
            "name": "iede_adu-rg-subnet",
            "resource_group_name": "iede_adu-rg",
            "virtual_network_name": "iede_adu-rg-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.az_vn",
            "data.azurerm_resource_group.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "az_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/virtualNetworks/iede_adu-rg-vnet/subnets/iede_adu-rg-subnet",
            "network_security_group_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/networkSecurityGroups/iede_adu-rg-security",
            "subnet_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/virtualNetworks/iede_adu-rg-vnet/subnets/iede_adu-rg-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.az_sg",
            "azurerm_subnet.az_sn",
            "azurerm_virtual_network.az_vn",
            "data.azurerm_resource_group.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "az_vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ff9627e8-4f9a-4f30-9115-57b8965508ff",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/virtualNetworks/iede_adu-rg-vnet",
            "location": "westeurope",
            "name": "iede_adu-rg-vnet",
            "resource_group_name": "iede_adu-rg",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/virtualNetworks/iede_adu-rg-vnet/subnets/iede_adu-rg-subnet",
                "name": "iede_adu-rg-subnet",
                "security_group": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/iede_adu-rg/providers/Microsoft.Network/networkSecurityGroups/iede_adu-rg-security"
              }
            ],
            "tags": {
              "Pillar": "Innovative Tech",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.existing"
          ]
        }
      ]
    }
  ]
}